fix demo card alignment

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -58,3 +58,9 @@ a {
     font-weight: 800;
   }
 }
+
+.card-demo {
+  @include media-breakpoint-up(md) {
+    min-height: 440px;
+  }
+}
